@@ -1,3 +1,9 @@
+2001-02-01  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Recipe.pm (_check_obey_status_string): Handle { "mon" } syntax
+	for hash key. Make sure that the monolith name is reasonable
+	before using delete.
+
 2001-01-26  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Recipe.pm (execute): Add status check on return. Print message
